// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PulsingDot renders with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ff0000",
        "borderRadius": 6,
        "height": 12,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 12,
      }
    }
  />
</View>
`;

exports[`PulsingDot renders with custom size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "height": 20,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 20,
      }
    }
  />
</View>
`;

exports[`PulsingDot renders with custom size and color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#00ff00",
        "borderRadius": 12,
        "height": 24,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 24,
      }
    }
  />
</View>
`;

exports[`PulsingDot renders with default props 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#fff",
        "borderRadius": 6,
        "height": 12,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 12,
      }
    }
  />
</View>
`;
